Update about mission statement

--- a/app/views/homepage/about.html.erb
+++ b/app/views/homepage/about.html.erb
@@ -42,7 +42,7 @@
   <h2>Mission</h2>
 
   <div class="info_section">
-    <p>The Homosaurus is an international linked data vocabulary of LGBTQ terms that supports improved access to LGBTQ resources within cultural institutions. Designed to serve as a companion to broad subject term vocabularies, the Homosaurus is a robust and cutting-edge vocabulary of LGBTQ-specific terminology that enhances the discoverability of LGBTQ resources. </p>
+    <p>The Homosaurus is an international linked data vocabulary of LGBTQ+ terms. Designed to enhance broad subject term vocabularies, the Homosaurus is a robust and cutting-edge thesaurus that advances the discoverability of LGBTQ+ resources and information.</p>
   </div>
 
  <h2>History</h2>
