--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -3,7 +3,7 @@
   <%= image_tag("homosaurus_logo_max_with_plus.png", class: 'logo') %>
 </div>
 <div class="well col-sm-12 col-md-12 homepage_info">
-  <p>The Homosaurus is an international linked data vocabulary of LGBTQ+ terms. Designed to enhance broad subject term vocabularies, the Homosaurus is a robust and cutting-edge thesaurus that advances the discoverability of LGBTQ+ resources and information.</p>
+  <p>Welcome to the Homosaurus! The Homosaurus is an international linked data vocabulary of Lesbian, Gay, Bisexual, Transgender, and Queer (LGBTQ) terms. This vocabulary is intended to function as a companion to broad subject term vocabularies, such as the Library of Congress Subject Headings. Libraries, archives, museums, and other institutions are encouraged to use the Homosaurus to support LGBTQ research by enhancing the discoverability of their LGBTQ resources.</p>
 
   <p>If you are interested in purchasing some Homosaurus swag, please visit our <%= link_to "online shop", "https://homosaurus.threadless.com" %>. All proceeds are used to support the project or are donated to LGBTQ+ organizations.</p>
 
