Minor update to handle blank prelabel

--- a/app/views/homepage/about.html.erb
+++ b/app/views/homepage/about.html.erb
@@ -186,14 +186,14 @@
       <td>
         <div class="media">
           <div class="media-left">
-            <%= image_tag("about/about_brian_watson.png", class: 'hidden-xs', alt: "Brian M. Watson in Pouch Cove, Newfoundland") %>
+            <%= image_tag("about/about_bri_watson.jpg", class: 'hidden-xs', alt: "Bri Watson photo") %>
           </div>
           <div class="media-body">
             <h4 class="media-heading">
-              Brian M. Watson
+              Bri Watson
             </h4>
             <p>
-              Brian M. Watson is the Archivist-Historian of the American Psychological Association’s Division 44 (Consensual Non-Monogamy), a historian of the book and sexuality, and a graduate archivist at the Kinsey Institute. They hold a master’s degree in History & Culture from Drew University, and are working on a MLIS (soon PhD) focusing on Archives, Digital Humanities, and Metadata at Indiana University Bloomington. They have published on antisex censorship, obscenity and are currently researching queer archives and sexual nomenclature.
+              Bri Watson is the Archivist-Historian of the American Psychological Association’s Division 44 (Consensual Non-Monogamy), a historian of the book and sexuality, and a graduate archivist at the Kinsey Institute. They hold a master’s degree in History & Culture from Drew University, and are working on a MLIS (soon PhD) focusing on Archives, Digital Humanities, and Metadata at Indiana University Bloomington. They have published on antisex censorship, obscenity and are currently researching queer archives and sexual nomenclature.
             </p>
           </div>
         </div>
