Update release page text

--- a/app/views/release/show.html.erb
+++ b/app/views/release/show.html.erb
@@ -25,7 +25,7 @@
 
   <div class="info_section">
     <p>
-      <strong>List of terms with preferred label changes:</strong>
+      <strong>List of terms with preferred term changes:</strong>
     <ol>
       <% @release_terms.each do |release_term| %>
         <% if release_term.change_type == "update" %>
