--- a/app/views/homepage/about.html.erb
+++ b/app/views/homepage/about.html.erb
@@ -231,7 +231,7 @@
               Adrian Williams
             </h4>
             <p>
-              Adrian Williams is the Cataloging & Metadata Librarian at the University of Kentucky Libraries. They have an MLIS from Florida State University. Their research interests include inclusive and user-accessible subject headings, and the history of cataloging and of the library catalog.
+              Adrian Williams is the Cataloging &amp; Metadata Librarian at the University of Kentucky Libraries. They have an MLIS from Florida State University. Their research interests include inclusive and user-accessible subject headings, and the history of cataloging and of the library catalog.
             </p>
           </div>
         </div>
