--- a/app/views/homepage/about.html.erb
+++ b/app/views/homepage/about.html.erb
@@ -5,7 +5,7 @@
             "showChars": 986,
             "moreText": "[Expand To Read Full Tribute]",
             "lessText"	: "",
-        });
+        }); 
 
     });
 </script>
@@ -58,6 +58,11 @@
     <p>In May, 2019, version 2 of the Homosaurus was released as a linked data vocabulary and is still accessible at <%= link_to "https://homosaurus.org/v2", vocabulary_index_path(id: "v2") %>.</p>
 
     <p>In September 2021, version 3 of the Homosaurus changed identifiers to be more consistent along with adding some initial language support. This is the current version of the volabulary available today at: <%= link_to "https://homosaurus.org/v3", vocabulary_index_path(id: "v3") %>. The Editorial Board is now focused on publicizing the project and making ongoing edits to the vocabulary.</p>
+  </div>
+
+ <h2>Resources</h2>
+ <div class="info_section">
+    <p> <%= link_to "Metadata Application Profile", "https://docs.google.com/document/d/1ndif61THKvrKRG8m6Y9gBVAOzwDWa95O9TbJV8tFTTA/edit?usp=sharing", target: "_blank" %> </p>
   </div>
 
 <h2>Editorial Board</h2>
