--- a/app/views/homepage/about.html.erb
+++ b/app/views/homepage/about.html.erb
@@ -300,7 +300,7 @@
 
 <h2>Gratitude</h2>
 <div class="info_section">
-<p>The Editorial Board would like to thank the many users of the Homosaurus who have suggested terms and provided feedback over the years. In particular, we are grateful to Orla Egan, Alice Galvinhill, Ellen Greenblatt, Dee Michel, and Lydia Willoughby for their contributions.</p>
+<p>The Editorial Board would like to thank our fabulous collaborators: AVEN, the Black Lesbian Archives, COLAGE, InterACT, the Leather Archives & Museum, and the Sex Worker Project. We would also like to thank the many users of the Homosaurus who have suggested terms and provided feedback over the years. In particular, we are grateful to Orla Egan, Alice Galvinhill, Ellen Greenblatt, Juniper Johnson, Dee Michel, Cailin Roles, and Lydia Willoughby for their contributions.</p>
 </div>
 
 </div>
