--- a/app/views/homepage/about.html.erb
+++ b/app/views/homepage/about.html.erb
@@ -62,6 +62,7 @@
 
  <h2>Resources</h2>
  <div class="info_section">
+ <p> <%= link_to "Documentation and Implementation Guide", "https://docs.google.com/document/d/1PgwSKGHnr4dokazFRbkoqQuYWbw8c_0LWYw0L2rkyAw/edit?usp=sharing", target: "_blank" %> </p>
     <p> <%= link_to "Metadata Application Profile", "https://docs.google.com/document/d/1ndif61THKvrKRG8m6Y9gBVAOzwDWa95O9TbJV8tFTTA/edit?usp=sharing", target: "_blank" %> </p>
   </div>
 
